# eventric-surface

./: Cargo.toml
.cargo/: audit.toml  deny.toml
.github/: README.md
.github/workflows/: audit.yml  continuous_integration.yml  coverage.yml
crates/eventric-model/: Cargo.toml
crates/eventric-model-core/: Cargo.toml
crates/eventric-model-core/src/: action.rs  decision.rs  error.rs  event.rs  lib.rs  projection.rs  stream.rs
crates/eventric-model-core/src/decision/: execute.rs  projections.rs  select.rs  update.rs
crates/eventric-model-core/src/event/: codec.rs  identifier.rs  tag.rs
crates/eventric-model-core/src/projection/: dispatch.rs  recognize.rs  select.rs
crates/eventric-model-macros/: Cargo.toml
crates/eventric-model-macros/src/: action.rs  decision.rs  event.rs  lib.rs  projection.rs  util.rs
crates/eventric-model/src/: lib.rs
crates/eventric-surface/: Cargo.toml
crates/eventric-surface-core/: Cargo.toml
crates/eventric-surface-core/src/: decision.rs  event.rs  lib.rs  macros.rs  projection.rs
crates/eventric-surface-core/src/decision/: query.rs  update.rs
crates/eventric-surface-core/src/event/: codec.rs  identifier.rs  macros.rs  specifier.rs  tag.rs
crates/eventric-surface-core/src/macros/: derive.rs
crates/eventric-surface-core/src/projection/: dispatch.rs  query.rs  recognize.rs  update.rs
crates/eventric-surface-core/src/projection/query/: macros.rs
crates/eventric-surface-macros/: Cargo.toml
crates/eventric-surface-macros/src/: decision.rs  event.rs  lib.rs  projection.rs
crates/eventric-surface-macros/src/event/: identifier.rs  tag.rs
crates/eventric-surface-macros/src/projection/: dispatch.rs  query.rs  recognize.rs
crates/eventric-surface/src/: lib.rs
examples/eventric-model-examples/: Cargo.toml
examples/eventric-model-examples/examples/: course_manager.rs
examples/eventric-model-examples/examples/course_subscriptions/: actions.rs  events.rs  main.rs  projections.rs
examples/eventric-surface-examples/: Cargo.toml
examples/eventric-surface-examples/examples/: course_manager.rs
examples/eventric-surface-examples/src/: lib.rs
