[profile.bench]
debug = true

[profile.release]
debug = true

[workspace]
members  = ["crates/*", "examples/eventric-surface-examples"]
resolver = "2"

[workspace.dependencies]
assertables             = { version = "9" }
darling                 = { version = "0.21" }
derive_more             = { version = "2", features = ["full"] }
eventric-core           = { git = "https://github.com/eventrica/eventric-core.git" }
eventric-stream         = { git = "https://github.com/eventrica/eventric-stream.git" }
eventric-surface        = { path = "crates/eventric-surface" }
eventric-surface-core   = { path = "crates/eventric-surface-core" }
eventric-surface-macros = { path = "crates/eventric-surface-macros" }
fancy_constructor       = { version = "2" }
proc-macro2             = { version = "1" }
quote                   = { version = "1" }
serde                   = { version = "1", features = ["derive"] }
serde_json              = { version = "1" }
syn                     = { version = "2" }
thiserror               = { version = "2" }

[workspace.lints.clippy]
cargo       = "warn"
complexity  = "warn"
correctness = "deny"
pedantic    = "warn"
perf        = "warn"
restriction = "allow"
style       = "warn"
suspicious  = "warn"

[workspace.lints.rust]
deprecated_safe         = "warn"
future_incompatible     = "warn"
keyword_idents          = "warn"
let_underscore          = "warn"
nonstandard_style       = "warn"
refining_impl_trait     = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms        = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unused                  = "warn"

[workspace.package]
authors    = ["Andrew Cherry (@kolektiv)"]
categories = ["data-structures"]
edition    = "2024"
keywords   = ["event", "sourcing", "streaming"]
license    = "AGPL-3.0-only"
readme     = "README.md"
repository = "https://github.com/eventrica/eventric-surface"
version    = "0.1.0"
