[profile.bench]
debug = true

[profile.release]
debug = true

[workspace]
members  = ["crates/*", "examples/*"]
resolver = "2"

[workspace.dependencies]
assertables           = { version = "9" }
darling               = { version = "0.21" }
derive_more           = { version = "2", features = ["full"] }
eventric-model        = { path = "crates/eventric-model" }
eventric-model-core   = { path = "crates/eventric-model-core" }
eventric-model-macros = { path = "crates/eventric-model-macros" }
eventric-stream       = { git = "https://github.com/eventrica/eventric-stream.git" }
fancy_constructor     = { version = "2" }
heck                  = { version = "0.5" }
proc-macro2           = { version = "1" }
quote                 = { version = "1" }
revision              = { version = "0.15" }
serde                 = { version = "1", features = ["derive"] }
serde_json            = { version = "1" }
syn                   = { version = "2", features = ["derive"] }
thiserror             = { version = "2" }

[workspace.lints.clippy]
cargo       = "warn"
complexity  = "warn"
correctness = "deny"
pedantic    = "warn"
perf        = "warn"
restriction = "allow"
style       = "warn"
suspicious  = "warn"

[workspace.lints.rust]
deprecated_safe         = "warn"
future_incompatible     = "warn"
keyword_idents          = "warn"
let_underscore          = "warn"
nonstandard_style       = "warn"
refining_impl_trait     = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms        = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unused                  = "warn"

[workspace.package]
authors    = ["Andrew Cherry (@kolektiv)"]
categories = ["data-structures"]
edition    = "2024"
keywords   = ["event", "sourcing", "streaming"]
license    = "AGPL-3.0-only"
readme     = "README.md"
repository = "https://github.com/eventrica/eventric-model"
version    = "0.1.0"
