[dependencies]
derive_more.workspace       = true
eventric-stream.workspace   = true
fancy_constructor.workspace = true
revision.workspace          = true
thiserror.workspace         = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Model Core"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-model-core"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
