[dependencies]
darling.workspace         = true
eventric-stream.workspace = true
heck.workspace            = true
proc-macro2.workspace     = true
quote.workspace           = true
syn.workspace             = true

[lib]
proc-macro = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Model Macros"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-model-macros"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
