[dependencies]
darling.workspace           = true
derive_more.workspace       = true
eventric-stream.workspace   = true
fancy_constructor.workspace = true
proc-macro2.workspace       = true
quote.workspace             = true
serde.workspace             = true
serde_json.workspace        = true
syn.workspace               = true
thiserror.workspace         = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Surface Core"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-surface-core"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
