[dependencies]
eventric-surface-core.workspace = true
proc-macro2.workspace           = true
syn.workspace                   = true

[lib]
proc-macro = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Surface Macros"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-surface-macros"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
