[dependencies]
eventric-surface-core.workspace   = true
eventric-surface-macros.workspace = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Surface"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-surface"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
