[dependencies]
derive_more.workspace       = true
eventric-model.workspace    = true
eventric-stream.workspace   = true
fancy_constructor.workspace = true
revision.workspace          = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Model Examples"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-model-examples"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
